--- a/main.html
+++ b/main.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-
+<title>
+	
+</title>
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -10,7 +12,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table border="2">
+	<table>
+		<caption>Student Details</caption>
 		<thead>
 			<tr>
 				<th>NAME</th>
