--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<table border="2px">
+	<table >
 		<caption>Student Details</caption>
 		<thead>
 			<tr>
